Fix textfield padding and spacing

--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,15 @@
   }
 
   html,
-  body {
+  body,
+  #root {
     width: 100%;
+    height: 100%;
     margin: 0;
   }
 
   body {
-    overflow-x: hidden;
+    scroll-padding-bottom: 24rem;
     background: #141414;
   }
 }
